--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ngraph.pixel": "^2.4.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "uuid-random": "^1.3.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
